--- a/helix-query.yaml
+++ b/helix-query.yaml
@@ -28,3 +28,32 @@ indices:
         select: head > link[rel="canonical"]
         value: |
           attribute(el, 'href')
+  channel-manifest:
+    include:
+      - '/screens/caesars/restaurants/menus/**'
+    target: '/screens/caesars/restaurants/menus/manifests'
+    properties:
+      title:
+        select: head > meta[property="og:title"]
+        value: |
+          attribute(el, 'content')
+      lastModified:
+        select: none
+        value: |
+          parseTimestamp(headers['last-modified'], 'ddd, DD MMM YYYY hh:mm:ss GMT')
+      scripts:
+        select: head > script[src]
+        values: |
+          attribute(el, 'src')
+      styles:
+        select: head > link[rel="stylesheet"]
+        values: |
+          attribute(el, 'href')
+      assets:
+        select: head > link[rel*="preload"]
+        values: |
+          attribute(el, 'href')
+      inline-images:
+        select: body img
+        values: |
+          attribute(el, 'src')
