--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -1,5 +1,5 @@
 {
   "project": "caesars-screens",
-  "host": "http://www.raghuwanfranklin.com.global.prod.fastly.net",
+  "host": "http://www.raghuwanfranklinpage.com.global.prod.fastly.net",
   "plugins": []
 }
